Fix spacing for footer, change anchor color and add hover state

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,18 @@ footer {
   background-color: var(--yellow);
 }
 
+footer p {
+  margin-bottom: 0;
+}
+
+footer a {
+  color: var(--blue);
+}
+
+footer a:hover {
+  color: #ccb5f0;
+}
+
 
 /* Search history accordion */
 .accordion {
